--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 #ignora la cartella out
 **/out
 
-#ignora le cartelle che iniziano con .
-**/.*
+#ignora la cartella .gradle
+**/.gradle
+
+#ignora la cartella .idea
+**/.idea
 
 #ignora la cartella build
 **/build
